dnl --------------------------------------------------------------------
dnl configure.ac for logfilter
dnl
dnl Copyright (c) 2006 by Educational Technology Resources, Inc.
dnl
dnl Licensed under the Apache License, Version 2.0 (the "License"); 
dnl you may not use this file except in compliance with the License. 
dnl You may obtain a copy of the License at 
dnl
dnl http://www.apache.org/licenses/LICENSE-2.0 
dnl
dnl Unless required by applicable law or agreed to in writing, software 
dnl distributed under the License is distributed on an "AS IS" BASIS, 
dnl WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. 
dnl See the License for the specific language governing permissions and 
dnl limitations under the License.
dnl --------------------------------------------------------------------

AC_INIT(logfilter, 0.4, logfilter@logfilter.org)
AC_CANONICAL_SYSTEM
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE


dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_MAKE_SET


dnl Checks for standard C stuff
AC_LANG_C
AC_HEADER_STDC


dnl Generate Makefiles
AC_OUTPUT(
	Makefile
)

